<resources>
    <string name="app_name">pyrexia</string>
    <string name="ok">Ok</string>
    <string name="connecting_error">Connection error</string>
    <string name="connection_error">Connection error %s</string>
    <string name="network_error_title">Network Error</string>

    <string name="device_name_hint">Choose a name</string>
    <string name="device_url_hint">http://hostname:port</string>

    <!-- Thermostat Fragment -->
    <string name="set_to">Set to</string>
    <string name="mode">Mode:</string>
    <string name="off">Off</string>
    <string name="enabled">Enabled:</string>
    <string name="unknown_temp">---</string>
    <string name="refill">refill</string>

    <!-- pydevice overflow menu -->
    <string name="forget">Forget</string>
    <string name="configure">Configure</string>
    <string name="shutdown">Shutdown</string>
    <string name="forget_are_you_sure">Are you sure you want to forget %s?</string>
    <string name="shutdown_title">Shutdown?</string>
    <string name="shutdown_are_you_sure">Are you sure you want to SHUTDOWN the device %s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- DeviceConfigFragment -->
    <string name="sensor_addr_hint_dht22">Gpio #</string>
    <string name="sensor_addr_hint_sp">Sensorpush Mac Address</string>
    <string name="sensor_addr_hint_generic">Sensor address</string>
    <string name="high">high</string>
    <string name="low">low</string>
    <string name="control_gpio_text">gpio %d on %s</string>
    <string name="sensor_gpio_text">gpio %s</string>
    <string name="delete_dialog_title">Delete?</string>

    <!-- SensorBottomSheetFragment -->
    <string name="sensor_name">Name:</string>

    <!-- SensorEditViewModel -->
    <string name="button_save">Save</string>
    <string name="sensor_name_hint">Sensor Name</string>
    <string name="sensor_update_interval_hint">Update interval (seconds)</string>

    <!-- StatEditViewModel -->
    <string name="stat_name_hint">Thermostat name</string>
    <string name="stat_mode_hint">Mode</string>
    <string name="stat_control_hint">Control? (relay)</string>
    <string name="stat_sensor_hint">Sensor?</string>

    <!-- ControlEdit -->
    <string name="control_run_time">Run time:</string>
    <string name="control_last_off">Last off:</string>
    <string name="control_last_on">Last on:</string>
    <string name="control_name_hint">Name for this control</string>
    <string name="control_gpio_hint">Gpio #</string>
    <string name="control_gpio_on_high_hint">Gpio high is ON?</string>
    <string name="control_min_run_hint">Minimum run time (seconds)</string>
    <string name="control_min_rest_hint">Minimum rest time (seconds)</string>
    <string name="control_run_capacity_hint">Propane tank run time (seconds)</string>
    <string name="control_name_error">Name cannot be blank</string>
    <string name="control_min_run_error">Invalid minimum run time in seconds</string>
    <string name="control_min_rest_error">Invalid minimum rest time in seconds</string>
    <string name="control_gpio_error">Invalid gpio #</string>
    <string name="control_on_high">on high</string>
    <string name="control_refill_confirm">Refill propane to 100%?</string>

    <!-- Components -->
    <string name="component_sensor_dht22">DHT22 Temperature Sensor</string>
    <string name="component_sensor_sp">SensorPush HW.t Bluetooth Sensor</string>
    <string name="component_relay">Relay (gpio)</string>
    <string name="component_vstat">Virtual Thermostat</string>

    <!-- DeviceConfig Overflow Menu -->
    <string name="component_edit">Edit</string>
    <string name="component_delete">Delete</string>
    <string name="component_delete_confirm">Are you sure you want to delete %s?</string>

    <!-- Network Error Messages -->
    <string name="network_error_socket_timeout">Check your network connection</string>

    <!-- Login -->
    <string name="login_enter_your_email">Enter your email</string>
    <string name="login_enter_your_password">Enter your password</string>
    <string name="login_sign_in">Sign in</string>
</resources>