<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="com.cryptomcgrath.pyrexia.deviceconfig.ControlEditViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/side_margin">

        <ImageView
            android:id="@+id/control_image"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:src="@drawable/relay_snip1"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/control_image"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextMedium18Grey61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.name}"
                android:error="@{model.nameError}"
                android:hint="@string/control_name_hint"
                android:singleLine="true"
                tools:text="Furnace" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gpio_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/name_edit"
            app:layout_constraintStart_toStartOf="@id/name_edit"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextMedium18Grey61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.gpio}"
                android:error="@{model.gpioError}"
                android:hint="@string/control_gpio_hint"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/min_run"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/gpio_edit"
            app:layout_constraintStart_toStartOf="@id/name_edit"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextMedium18Grey61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.minRun}"
                android:error="@{model.minRunError}"
                android:hint="@string/control_min_run_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/min_rest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/min_run"
            app:layout_constraintStart_toStartOf="@id/name_edit"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextMedium18Grey61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.minRest}"
                android:error="@{model.minRestError}"
                android:hint="@string/control_min_rest_hint"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button_save"
            android:onClick="@{(v)->model.onClickSave(v)}"
            app:layout_constraintTop_toBottomOf="@id/min_rest"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
