<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="model"
            type="com.cryptomcgrath.pyrexia.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/top_padding"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:background="@color/light_blue"
        >

        <ImageView
            android:id="@+id/pi_image"
            android:layout_width="125dp"
            android:layout_height="62dp"
            android:layout_marginTop="@dimen/top_padding"
            android:src="@drawable/pisnip2"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{model.name}"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:gravity="center"
            tools:text="My Device Name"
            app:layout_constraintTop_toBottomOf="@id/pi_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/url_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{model.url}"
            android:fontFamily="sans-serif-medium"
            android:textSize="18sp"
            android:gravity="center"
            tools:text="@string/device_url_hint"
            app:layout_constraintTop_toBottomOf="@id/name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_spacing"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/url_text"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextMedium18Grey61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.email}"
                android:error="@{model.emailError}"
                android:hint="@string/login_enter_your_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/email_text"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextMedium18Grey61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.password}"
                android:error="@{model.passwordError}"
                android:hint="@string/login_enter_your_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="@dimen/section_spacing"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:text="@string/login_sign_in"
            android:textAllCaps="false"
            android:onClick="@{(v)->model.onClickLogin(v)}"
            android:backgroundTint="@color/purple_700"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/password_text"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
